--- a/source/index.html
+++ b/source/index.html
@@ -214,8 +214,9 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
     font-family: inherit; font-size: 12px;
     background-color: #fcfcfc; border: #fcfcfc; color: #333;
     border-radius: 2px; width: 100%; height: 23px; padding: 3px 12px 3px 7px;
-    margin-top: 3px; margin-bottom: 3px; box-sizing: border-box; outline: none;
-    -moz-box-sizing: border-box; -webkit-appearance: none; -moz-appearance: none;
+    margin-top: 3px; margin-bottom: 3px; outline: none;
+    box-sizing: border-box; -moz-box-sizing: border-box;
+    appearance: none; -webkit-appearance: none; -moz-appearance: none;
     background-image: linear-gradient(45deg, transparent 50%, #333 50%), linear-gradient(135deg, #333 50%, transparent 50%);
     background-position: calc(100% - 12px) calc(10px), calc(100% - 7px) calc(10px);
     background-size: 5px 5px, 5px 5px;
