Update view.js (#283)

--- a/source/index.html
+++ b/source/index.html
@@ -102,8 +102,9 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .menu { display: block; position: absolute; left: -225px; width: 225px; top: 0; height: 100%; z-index: 2; background-color: rgba(235, 235, 235, 0.97); border-right: 1px solid rgba(255, 255, 255, 0.5); padding-top: 40px; padding-bottom: 2px; margin-left: 0; margin-top: 0; overflow: hidden; transition: 0.1s; }
 .menu button { display: block; border: none; border-radius: 0; background-color: transparent; color: black; width: 100%; text-align: left; padding: 4px 12px 5px 12px; white-space: no-wrap; font-size: 12px; }
 .menu button:hover { color: #ffffff; background-color: #2e6bd2; }
+.menu button:disabled { color: #888888; }
+.menu button .shortcut { float: right; color: #888888; }
 .menu .separator { margin-top: 2px; margin-bottom: 2px; border-top: 1px; border-bottom: 0; border-style: solid; border-color: #e5e5e5; }
-.menu .shortcut { float: right; }
 @-webkit-keyframes orbit { 0% { -webkit-transform: rotate(0deg); transform: rotate(0deg); } 100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); } }
 @keyframes orbit { 0% { -webkit-transform: rotate(0deg); transform: rotate(0deg); }  100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); } }
 .welcome.spinner .logo-spinner-stroke { stroke: #ececec; }
@@ -163,7 +164,8 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .menu { background-color: rgba(43, 43, 43, 0.90); border-color: rgba(0, 0, 0, 0); }
 .menu button { color: #ffffff; }
 .menu button:hover { color: #ffffff; background-color: #1d59d1; }
-.menu .shortcut { color: #888888; }
+.menu button:disabled { color: #888888; }
+.menu button .shortcut { color: #888888; }
 .menu .separator { border-color: #5a5a5a; }
 }
 @media all and (max-width: 640px) {
