Update index.html (#283)

--- a/source/index.html
+++ b/source/index.html
@@ -180,8 +180,8 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .welcome .message-dialog .message-text { top: 190px; width: 240px; }
 .welcome .progress { top: 160px; height: 2px; width: 100px; }
 .about .logo { border-radius: 0; border-left: 0px; border-right: 0px; width: 100%; padding-left: 0; padding-right: 0; }
-.about .logo-message { top: 180px; font-size: 12px; }
-.about .logo-github { top: 300px; width: 40px; height: 40px; }
+.about .logo-message { top: 175px; font-size: 12px; }
+.about .logo-github { top: 370px; }
 }
 @media only screen and (max-device-width: 1024px) {
 .toolbar-button { width: 32px; height: 32px; }
