Update view.js (#283)

--- a/source/index.html
+++ b/source/index.html
@@ -106,7 +106,7 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .menu .menu-group { margin-bottom: 12px; }
 .menu .menu-group .menu-group-header { display: block; border: none; border-radius: 0; color: black; width: 100%; text-align: left; margin: 4px 12px 5px 12px; white-space: no-wrap; font-size: 11px; font-weight: bold; color: #bbbbbb; white-space: nowrap; }
 .menu .menu-group .menu-item { display: block; border: none; border-radius: 0; background-color: transparent; color: black; width: 100%; text-align: left; padding: 4px 12px 5px 12px; white-space: no-wrap; font-size: 12px; }
-.menu .menu-group .menu-item:hover { color: #ffffff; background-color: #2e6bd2; }
+.menu .menu-group .menu-item:focus { color: #ffffff; background-color: #2e6bd2; outline: none; }
 .menu .menu-group .menu-item:disabled { color: #888888; }
 .menu .menu-group .menu-item .shortcut { float: right; color: #888888; }
 .menu .menu-group .menu-separator { border-top: 1px; border-bottom: 0; border-style: solid; border-color: #e5e5e5; margin-left: 12px; margin-right: 12px; }
@@ -161,7 +161,7 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .menu { background-color: rgba(43, 43, 43, 0.97); border-color: rgba(0, 0, 0, 0); }
 .menu .menu-group .menu-group-header { color: #666666; }
 .menu .menu-group .menu-item { color: #ffffff; }
-.menu .menu-group .menu-item:hover { color: #ffffff; background-color: #1d59d1; }
+.menu .menu-group .menu-item:focus { color: #ffffff; background-color: #2e6bd2; }
 .menu .menu-group .menu-item:disabled { color: #888888; }
 .menu .menu-group .menu-item .shortcut { color: #888888; }
 .menu .menu-group .menu-separator { border-color: #363636; }
