--- a/source/index.html
+++ b/source/index.html
@@ -105,10 +105,10 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .menu { display: block; position: absolute; left: -200px; width: 200px; top: 0; height: 100%; z-index: 2; background-color: rgba(235, 235, 235, 0.97); border-right: 1px solid rgba(255, 255, 255, 0.5); padding-top: 40px; padding-bottom: 2px; margin-left: 0; margin-top: 0; overflow: hidden; transition: 0.1s; }
 .menu .menu-group { margin-bottom: 12px; }
 .menu .menu-group .menu-group-header { display: block; border: none; border-radius: 0; color: black; width: 100%; text-align: left; margin: 4px 12px 5px 12px; white-space: no-wrap; font-size: 11px; font-weight: bold; color: #bbbbbb; white-space: nowrap; }
-.menu .menu-group .menu-item { display: block; border: none; border-radius: 0; background-color: transparent; color: black; width: 100%; text-align: left; padding: 4px 12px 5px 12px; white-space: no-wrap; font-size: 12px; }
-.menu .menu-group .menu-item:focus { color: #ffffff; background-color: #2e6bd2; outline: none; }
-.menu .menu-group .menu-item:disabled { color: #888888; }
-.menu .menu-group .menu-item .shortcut { float: right; color: #888888; }
+.menu .menu-group .menu-command { display: block; border: none; border-radius: 0; background-color: transparent; color: black; width: 100%; text-align: left; padding: 4px 12px 5px 12px; white-space: no-wrap; font-size: 12px; }
+.menu .menu-group .menu-command:focus { color: #ffffff; background-color: #2e6bd2; outline: none; }
+.menu .menu-group .menu-command:disabled { color: #888888; }
+.menu .menu-group .menu-command .shortcut { float: right; color: #888888; }
 .menu .menu-group .menu-separator { border-top: 1px; border-bottom: 0; border-style: solid; border-color: #e5e5e5; margin-left: 12px; margin-right: 12px; }
 @-webkit-keyframes orbit { 0% { -webkit-transform: rotate(0deg); transform: rotate(0deg); } 100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); } }
 @keyframes orbit { 0% { -webkit-transform: rotate(0deg); transform: rotate(0deg); }  100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); } }
@@ -160,10 +160,10 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .menu-button:hover { color: #ffffff; }
 .menu { background-color: rgba(43, 43, 43, 0.97); border-color: rgba(0, 0, 0, 0); }
 .menu .menu-group .menu-group-header { color: #666666; }
-.menu .menu-group .menu-item { color: #ffffff; }
-.menu .menu-group .menu-item:focus { color: #ffffff; background-color: #2e6bd2; }
-.menu .menu-group .menu-item:disabled { color: #888888; }
-.menu .menu-group .menu-item .shortcut { color: #888888; }
+.menu .menu-group .menu-command { color: #ffffff; }
+.menu .menu-group .menu-command:focus { color: #ffffff; background-color: #2e6bd2; }
+.menu .menu-group .menu-command:disabled { color: #888888; }
+.menu .menu-group .menu-command .shortcut { color: #888888; }
 .menu .menu-group .menu-separator { border-color: #363636; }
 }
 @media all and (max-width: 640px) {
